<resources>
    <string name="app_name">Save My Location</string>
    <string name="my_location">My Location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="no_address">No address found</string>
    <string name="fetching_address">Fetching address</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="notify">Notify</string>
    <string name="do_not_notify">Do Not Notify</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="map">Map</string>
    <string name="saved">Saved Locations</string>
    <string name="no_locations_saved">No saved locations available</string>
    <string name="location_notification">Location Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
