<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/white">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label"
            android:inputType="text"
            app:backgroundTint="@android:color/black"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_name"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_label"
            android:inputType="text"
            app:backgroundTint="@android:color/black"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/til_address"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/green"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/red"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>

</RelativeLayout>