<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/saved_loc_bg"
    android:layout_margin="7dp">

    <ImageView
        android:id="@+id/iv_map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        android:adjustViewBounds="true"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/map"
        android:tint="@color/bg_transparent_black"/>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@id/iv_map"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="H66/T1, Kurunji flats, Thiruvalluvar Nagar, Thiruvanmiyur, Chennai 600041"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/blue"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/iv_map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify"
        android:layout_below="@id/iv_map"
        android:layout_toRightOf="@+id/btn_share"
        android:layout_toEndOf="@+id/btn_share"
        android:textColor="@color/blue"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_below="@id/iv_map"
        android:textColor="@color/red"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>